--- a/calculator/Views/Home/Index.cshtml
+++ b/calculator/Views/Home/Index.cshtml
@@ -2,30 +2,41 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="calculator">
+    <div class="input" id="input"></div>
+    <div class="buttons">
+        <div class="operators">
+            <div>+</div>
+            <div>-</div>
+            <div>&times;</div>
+            <div>&divide;</div>
+        </div>
+        <div class="leftPanel">
+            <div class="numbers">
+                <div>7</div>
+                <div>8</div>
+                <div>9</div>
+            </div>
+            <div class="numbers">
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <div class="numbers">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+            </div>
+            <div class="numbers">
+                <div>0</div>
+                <div>.</div>
+                <div id="clear">C</div>
+            </div>
+        </div>
+        <div class="equal" id="result">=</div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+<script>
+
+</script>
